New text for about me section

--- a/index.html
+++ b/index.html
@@ -234,23 +234,23 @@ An interactive vanilla javascript project where the player types a letter to gue
         </p>
         <div class="about-section-hero container">
           <div class="row">
-            <div class="col-lg-6">
-              <h1>👋🏼 Hi, I'm Stephanie!</h1>
-              <p>
-                I'm a self-taught frontend dev currently working on learning
-                JavaScript and React. I come from a non-traditional tech
-                background (I'm a chef!) and am looking for opportunities where
-                I can contribute as a developer and advocate for accessibility,
-                diversity, and inclusivity with what we code and design. Due to
-                my fine-dining catering background, I'm accustomed to working in
-                agile, dynamic environments and value open communication and
-                collaboration to put forth the best version of a product.
-              </p>
-              <p>
-                I'm open to full-time frontend developer roles or internships.
+            <div class="col-lg-6 d-flex align-items-center">
+              <p>Hi 👋🏼, I’m Stephanie Parra, a junior software developer with experience in frontend and a keen interest in UX and accessible design.<br/>
+                <br/>
+                I’ve been working with analytical, creative problem-solving processes, and creating safe, inclusive environments for 8+ years, initially during my degree in Sociology, where I quickly learned the positive impact of equitable technology for all communities.<br/>
+                <br/>
+                After graduating, I pursued a career in the food industry, and found myself looking at many government sites that were supposed to help people find or access food but didn’t exactly make it easy. Besides poor UX being a major hindrance, I also realized that food wasn’t accessible for certain populations because tech education & tech literacy weren’t either! (It all goes hand-in-hand!) <br/>
+                <br/>
+                I became obsessed with advocating for tech education for all even more so, especially for soon-to-be young STEAMers. I enrolled in 2 intensive coding bootcamps, built 3 React apps, got a software engineering internship, joined 2 social issue-based design-a-thons, did a career day for high school kids, and am excited to join a team where I can continue building, learning and challenging myself, especially in the field of edu-tech!<br/>
+                <br/>
+                Connect with me to talk coding, making tech accessible & fun, and games! 👾<br/>
+                <br/>
+                When I’m not coding or creating sites for small businesses, you’ll find me working out, 🏋🏻‍♀️ taking walks with my dog, 🐾 learning to skateboard, 🛹 and trying new recipes in the kitchen!👩🏻‍🍳<br/>
+                <br/>
+                I'm open to full-time frontend developer roles. ✅
               </p>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 d-flex align-items-center">
               <img
                 src="images/profile-pic.png"
                 class="img-fluid profile-pic"
