Added margin on hero buttons

--- a/index.html
+++ b/index.html
@@ -86,16 +86,18 @@
         & delightful design. Based in Los Angeles.🌴
       </h1>
       <div class="hero-buttons">
-        <a href="#contact" title="Contact" class="primary-button btn-group"
+        <div class="btn-group">
+          <a href="#contact" title="Contact" class="primary-button btn-group"
           >Contact</a
-        >
-        <a
+          >
+          <a
           href="resume-link-here"
           target="_blank"
           title="Resume"
           class="secondary-button btn-group"
           >See my resume</a
-        >
+          >
+        </div>
       </div>
     </div>
     <div class="container">
@@ -234,7 +236,7 @@ An interactive vanilla javascript project where the player types a letter to gue
         </p>
         <div class="about-section-hero container">
           <div class="row">
-            <div class="col-lg-6 d-flex align-items-center">
+            <div class="col-lg-6">
               <p>Hi 👋🏼, I’m Stephanie Parra, a junior software developer with experience in frontend and a keen interest in UX and accessible design.<br/>
                 <br/>
                 I’ve been working with analytical, creative problem-solving processes, and creating safe, inclusive environments for 8+ years, initially during my degree in Sociology, where I quickly learned the positive impact of equitable technology for all communities.<br/>
@@ -250,10 +252,10 @@ An interactive vanilla javascript project where the player types a letter to gue
                 I'm open to full-time frontend developer roles. ✅
               </p>
             </div>
-            <div class="col-lg-6 d-flex align-items-center">
+            <div class="col-lg-6 d-flex justify-content-center justify-content-lg-start">
               <img
                 src="images/profile-pic.png"
-                class="img-fluid profile-pic"
+                class="img-fluid profile-pic align-self-start"
                 alt="Stephanie"
               />
             </div>
