Wrapped card links in a div

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
     <div class="container">
       <p class="section-title" id="projects">
-        Projects🛠️
+        Projects 🛠️
       </p>
     <div class="container mt-4">
     <div class="row">
@@ -121,14 +121,12 @@
               <li>CSS</li>
             </ul>
             <p class="card-text">
-Uses real-time data from the SheCodes Weather API, integrates geolocation, a search feature, changing icons & custom music playlist functionality (Spotify embed).
-</p>
-<a href="https://github.com/stephanieparra/react-weather-app" title="github-repo" class="github-repo-link"
-          >Github Repo</a
-        >
-<a href="https://react-vaporwave-weather-app.netlify.app" title="live-version-link" class="live-version-link"
-          >Live Version</a
-        >
+              Uses real-time data from the SheCodes Weather API, integrates geolocation, a search feature, changing icons & custom music playlist functionality (Spotify embed).
+            </p>
+            <div class="card-links">
+              <a href="https://github.com/stephanieparra/react-weather-app" title="github-repo" class="github-repo-link">Github Repo</a>
+              <a href="https://react-vaporwave-weather-app.netlify.app" title="live-version-link" class="live-version-link">Live Version</a>
+            </div>
           </div>
         </div>
       </div>
@@ -147,14 +145,12 @@ Uses real-time data from the SheCodes Weather API, integrates geolocation, a sea
               <li>CSS</li>
             </ul>
             <p class="card-text">
-Integrated SheCode's Dictionary API to display definitions, pronunciation audio and text, synonyms and images of the searched word.
-</p>
-<a href="https://github.com/stephanieparra/dictionary-app" title="github-repo" class="github-repo-link"
-          >Github Repo</a
-        >
-<a href="https://react-dynamic-dictionary.netlify.app" title="live-version-link" class="live-version-link"
-          >Live Version</a
-        >
+              Integrated SheCode's Dictionary API to display definitions, pronunciation audio and text, synonyms and images of the searched word.
+            </p>
+            <div class="card-links">
+              <a href="https://github.com/stephanieparra/dictionary-app" title="github-repo" class="github-repo-link">Github Repo</a>
+              <a href="https://react-dynamic-dictionary.netlify.app" title="live-version-link" class="live-version-link">Live Version</a>
+            </div>
           </div>
         </div>
       </div>
@@ -170,14 +166,12 @@ Integrated SheCode's Dictionary API to display definitions, pronunciation audio 
               <li>CSS</li>
             </ul>
             <p class="card-text">
-Allows users to create, search for, and delete notes & write in the title and description fields.
-</p>
-<a href="https://github.com/stephanieparra/react-sticky-notes" title="github-repo" class="github-repo-link"
-          >Github Repo</a
-        >
-<a href="https://post-it-notes-react-app.netlify.app" title="live-version-link" class="live-version-link"
-          >Live Version</a
-        >
+              Allows users to create, search for, and delete notes & write in the title and description fields.
+            </p>
+            <div class="card-links">
+              <a href="https://github.com/stephanieparra/react-sticky-notes" title="github-repo" class="github-repo-link">Github Repo</a>
+              <a href="https://post-it-notes-react-app.netlify.app" title="live-version-link" class="live-version-link">Live Version</a>
+            </div>
           </div>
         </div>
       </div>
@@ -194,14 +188,12 @@ Allows users to create, search for, and delete notes & write in the title and de
               <li>CSS</li>
             </ul>
             <p class="card-text">
-A vanilla javascript site that displays my public repos from github, employs dynamic searching, and displays the name, description, default branch, and main languages used on that project. Users can click through each repo, view the repo on github, or go back to the main gallery.
-</p>
-<a href="https://github.com/stephanieparra/github-repo-gallery" title="github-repo" class="github-repo-link"
-          >Github Repo</a
-        >
-<a href="https://gh-repo-gallery.netlify.app" title="live-version-link" class="live-version-link"
-          >Live Version</a
-        >
+              A vanilla javascript site that displays my public repos from github, employs dynamic searching, and displays the name, description, default branch, and main languages used on that project. Users can click through each repo, view the repo on github, or go back to the main gallery.
+            </p>
+            <div class="card-links">
+              <a href="https://github.com/stephanieparra/github-repo-gallery" title="github-repo" class="github-repo-link">Github Repo</a>
+              <a href="https://gh-repo-gallery.netlify.app" title="live-version-link" class="live-version-link">Live Version</a>
+            </div>
           </div>
         </div>
       </div>
@@ -217,15 +209,12 @@ A vanilla javascript site that displays my public repos from github, employs dyn
               <li>CSS</li>
             </ul>
             <p class="card-text">
-An interactive vanilla javascript project where the player types a letter to guess a word. The project features the display of already-guessed letters, the countdown to how many guesses remain, and the option to restart the game.
-
-</p>
-<a href="https://github.com/stephanieparra/guess-the-word-project" title="github-repo" class="github-repo-link"
-          >Github Repo</a
-        >
-<a href="https://javascript-guess-word-game.netlify.app" title="live-version-link" class="live-version-link"
-          >Live Version</a
-        >
+              An interactive vanilla javascript project where the player types a letter to guess a word. The project features the display of already-guessed letters, the countdown to how many guesses remain, and the option to restart the game.
+            </p>
+            <div class="card-links">
+              <a href="https://github.com/stephanieparra/guess-the-word-project" title="github-repo" class="github-repo-link">Github Repo</a>
+              <a href="https://javascript-guess-word-game.netlify.app" title="live-version-link" class="live-version-link">Live Version</a>
+            </div>
           </div> 
         </div>
       </div>
