--- a/index.html
+++ b/index.html
@@ -175,8 +175,10 @@
           </div>
         </div>
       </div>
-      <div class="row justify-content-center">
-        <!-- Image 4 -->
+    </div>
+
+    <div class="row justify-content-center">
+      <!-- Image 4 -->
       <div class="col-md-4 mb-4">
         <div class="card">
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/751/original/3.png?1718234816" class="card-img-top" alt="Image 4">
