Styling to about section

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <li>CSS</li>
               </ul>
               <p class="card-text">
-                A vanilla javascript site that displays my public repos from github, employs dynamic searching, and displays the name, description, default branch, and main languages used on that project. Users can click through each repo, view the repo on github, or go back to the main gallery.
+                Employs dynamic searching, and displays my public repos from GitHub, the description, default branch, and main languages used on that project.
               </p>
               <div class="card-links">
                 <a href="https://github.com/stephanieparra/github-repo-gallery" title="github-repo" class="github-repo-link">Github Repo</a>
@@ -210,8 +210,10 @@
     </div>
   </div>
   <div class="row mb-5">
-    <p class="section-title" id="about">About Me ✨</p>
-    <div class="about-section-hero container">
+    <div class="col-12">
+      <p class="section-title container" id="about">About Me ✨</p>
+    </div>
+    <div class="about-section">
       <div class="row">
         <div class="col-lg-6">
           <p>Hi 👋🏼, I’m Stephanie Parra, a junior software developer with experience in frontend and a keen interest in UX and accessible design.<br/>
@@ -236,50 +238,50 @@
           <h2 class="section-title text-center">Skills & Tools 🧰</h2>
           <div class="row row-skills justify-content-center">
             <div class="col-2 text-center">
-              <i class="fab fa-html5"></i>
-              <p class="skill-title">HTML5</p>
-            </div>
-            <div class="col-2 text-center">
-              <i class="fab fa-css3-alt"></i>
-              <p class="skill-title">CSS3</p>
-            </div>
-            <div class="col-2 text-center">
-              <i class="fab fa-js-square"></i>
-              <p class="skill-title">JavaScript</p>
-            </div>
-            <div class="col-2 text-center">
-              <i class="fab fa-react"></i>
-              <p class="skill-title">React</p>
-            </div>
-            <div class="col-2 text-center"> 
-              <i class="fab fa-bootstrap"></i>
-              <p class="skill-title">Bootstrap</p>
-            </div>
-            <div class="row row-skills justify-content-center">
-              <div class="col-2 text-center">
-                <img src="/images/api.png" width="60" />
-                <p class="skill-title">REST APIs</p>
-              </div>
-              <div class="col-2 text-center">
-                <i class="fab fa-github-square"></i>
-                <p class="skill-title">GitHub</p>
-              </div>
-              <div class="col-2 text-center">
-                <img src="/images/netlify.png" width="60" />
-                <p class="skill-title">Hosting/Netlify</p>
-              </div>
-              <div class="col-2 text-center">
-                <img src="/images/vscode.png" width="60" />
-                <p class="skill-title">VSCode</p>
-              </div>
-              <div class="col-2 text-center">
-                <i class="fab fa-figma"></i>
-                <p class="skill-title">Figma</p>
-              </div>
-            </div>
+            <i class="fab fa-html5"></i>
+            <p class="skill-title">HTML5</p>
+          </div>
+          <div class="col-2 text-center">
+            <i class="fab fa-css3-alt"></i>
+            <p class="skill-title">CSS3</p>
+          </div>
+          <div class="col-2 text-center">
+            <i class="fab fa-js-square"></i>
+            <p class="skill-title">JavaScript</p>
+          </div>
+          <div class="col-2 text-center">
+            <i class="fab fa-react"></i>
+            <p class="skill-title">React</p>
+          </div>
+          <div class="col-2 text-center">
+            <i class="fab fa-bootstrap"></i>
+            <p class="skill-title">Bootstrap</p>
+          </div>
+        </div>
+        <div class="row row-skills justify-content-center">
+          <div class="col-2 text-center">
+            <img src="/images/api.png" width="60" alt="API Icon">
+            <p class="skill-title">REST APIs</p>
+          </div>
+          <div class="col-2 text-center">
+            <i class="fab fa-github-square"></i>
+          <p class="skill-title">GitHub</p>
+          </div>
+          <div class="col-2 text-center">
+            <img src="/images/netlify.png" width="60" alt="Netlify Icon">
+            <p class="skill-title">Hosting</p>
+          </div>
+          <div class="col-2 text-center">
+            <img src="/images/vscode.png" width="60" alt="VSCode Icon">
+            <p class="skill-title">VSCode</p>
+          </div>
+          <div class="col-2 text-center">
+            <i class="fab fa-figma"></i>
+            <p class="skill-title">Figma</p>
           </div>
         </div>
       </div>
+    </div>
     <footer>
       <div class="d-flex flex-column align-items-center mb-3">
         <h2 id="contact">Let's Connect!</h2>
