--- a/index.html
+++ b/index.html
@@ -282,41 +282,41 @@
         </div>
       </div>
     </div>
-    <footer>
-      <div class="d-flex flex-column align-items-center mb-3">
-        <h2 id="contact">Let's Connect!</h2>
+  </div>
+  <footer>
+    <div class="d-flex flex-column align-items-center mb-3">
+      <h2 id="contact">Let's Connect!</h2>
         <a
           href="mailto:stephanieparrastudio@gmail.com"
           target="_blank"
           class="email-link"
-          title="Stephanie's email"
-          >stephanieparrastudio@gmail.com</a
-        >
-      </div>
-      <div class="social-links d-flex justify-content-center">
-        <a
-          href="https://github.com/stephanieparra"
-          target="_blank"
-          title="Github Profile"
-          ><i class="fab fa-github"></i
-        ></a>
-        <a
-          href="https://www.linkedin.com/in/stephaniemsparra/"
-          target="_blank"
-          title="LinkedIn Profile"
-          ><i class="fab fa-linkedin"></i
-        ></a>
-      </div>
-      <p class="text-center mt-5" id="copyright">
-        © 2022 This site was built by Stephanie Parra and is
-        <a
-          href="https://github.com/stephanieparra/portfolio-project"
-          target="_blank"
-          title="Github Profile"
-          class="open-sourced"
-          >open-sourced</a
-        >. 👾
-      </p>
-    </footer>
-  </body>
+          title="Stephanie's email">stephanieparrastudio@gmail.com
+        </a>
+    </div>
+    <div class="social-links d-flex justify-content-center">
+      <a
+        href="https://github.com/stephanieparra"
+        target="_blank"
+        title="Github Profile"
+        ><i class="fab fa-github"></i>
+      </a>
+      <a
+        href="https://www.linkedin.com/in/stephaniemsparra/"
+        target="_blank"
+        title="LinkedIn Profile"
+        ><i class="fab fa-linkedin"></i>
+      </a>
+    </div>
+    <p class="text-center mt-5" id="copyright">
+      © 2022 This site was built by Stephanie Parra and is
+      <a
+        href="https://github.com/stephanieparra/portfolio-project"
+        target="_blank"
+        title="Github Profile"
+        class="open-sourced"
+        >open-sourced
+      </a>. 👾
+    </p>
+  </footer>
+</body>
 </html>
