Fixed skills and tools grid styling

--- a/index.html
+++ b/index.html
@@ -236,49 +236,53 @@
         </div>
         <div class="skills-section" id="skills">
           <h2 class="section-title text-center">Skills & Tools 🧰</h2>
-          <div class="row row-skills justify-content-center">
-            <div class="col-2 text-center">
-            <i class="fab fa-html5"></i>
-            <p class="skill-title">HTML5</p>
-          </div>
-          <div class="col-2 text-center">
-            <i class="fab fa-css3-alt"></i>
-            <p class="skill-title">CSS3</p>
-          </div>
-          <div class="col-2 text-center">
-            <i class="fab fa-js-square"></i>
-            <p class="skill-title">JavaScript</p>
-          </div>
-          <div class="col-2 text-center">
-            <i class="fab fa-react"></i>
-            <p class="skill-title">React</p>
-          </div>
-          <div class="col-2 text-center">
-            <i class="fab fa-bootstrap"></i>
-            <p class="skill-title">Bootstrap</p>
-          </div>
-        </div>
-        <div class="row row-skills justify-content-center">
-          <div class="col-2 text-center">
-            <img src="/images/api.png" width="60" alt="API Icon">
-            <p class="skill-title">REST APIs</p>
-          </div>
-          <div class="col-2 text-center">
-            <i class="fab fa-github-square"></i>
-          <p class="skill-title">GitHub</p>
-          </div>
-          <div class="col-2 text-center">
-            <img src="/images/netlify.png" width="60" alt="Netlify Icon">
-            <p class="skill-title">Hosting</p>
-          </div>
-          <div class="col-2 text-center">
-            <img src="/images/vscode.png" width="60" alt="VSCode Icon">
-            <p class="skill-title">VSCode</p>
-          </div>
-          <div class="col-2 text-center">
-            <i class="fab fa-figma"></i>
-            <p class="skill-title">Figma</p>
-          </div>
+          <div class="container">
+  <div class="row row-skills justify-content-center">
+    <div class="col-6 col-md-4 col-lg-2 skill-item">
+      <i class="fab fa-html5 skill-icon"></i>
+      <p class="skill-title">HTML5</p>
+    </div>
+    <div class="col-6 col-md-4 col-lg-2 skill-item">
+      <i class="fab fa-css3-alt skill-icon"></i>
+      <p class="skill-title">CSS3</p>
+    </div>
+    <div class="col-6 col-md-4 col-lg-2 skill-item">
+      <i class="fab fa-js-square skill-icon"></i>
+      <p class="skill-title">JavaScript</p>
+    </div>
+    <div class="col-6 col-md-4 col-lg-2 skill-item">
+      <i class="fab fa-react skill-icon"></i>
+      <p class="skill-title">React</p>
+    </div>
+    <div class="col-6 col-md-4 col-lg-2 skill-item">
+      <i class="fab fa-bootstrap skill-icon"></i>
+      <p class="skill-title">Bootstrap</p>
+    </div>
+  </div>
+  <div class="row row-skills justify-content-center">
+    <div class="col-6 col-md-4 col-lg-2 skill-item">
+      <img src="/images/api.png" class="skill-icon" width="60" alt="API Icon">
+      <p class="skill-title">REST APIs</p>
+    </div>
+    <div class="col-6 col-md-4 col-lg-2 skill-item">
+      <i class="fab fa-github-square skill-icon"></i>
+      <p class="skill-title">GitHub</p>
+    </div>
+    <div class="col-6 col-md-4 col-lg-2 skill-item">
+      <img src="/images/netlify.png" class="skill-icon" width="60" alt="Netlify Icon">
+      <p class="skill-title">Hosting</p>
+    </div>
+    <div class="col-6 col-md-4 col-lg-2 skill-item">
+      <img src="/images/vscode.png" class="skill-icon" width="60" alt="VSCode Icon">
+      <p class="skill-title">VSCode</p>
+    </div>
+    <div class="col-6 col-md-4 col-lg-2 skill-item">
+      <i class="fab fa-figma skill-icon"></i>
+      <p class="skill-title">Figma</p>
+    </div>
+  </div>
+</div>
+
         </div>
       </div>
     </div>
