Edited img src for skills grid

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
               <div class="row row-skills justify-content-center">
                 <div class="col-6 col-md-4 col-lg-2 skill-item">
                   <img
-                    src="/images/api.png"
+                    src="images/api.png"
                     class="skill-icon"
                     width="60"
                     alt="API Icon"
@@ -402,7 +402,7 @@
                 </div>
                 <div class="col-6 col-md-4 col-lg-2 skill-item">
                   <img
-                    src="/images/netlify.png"
+                    src="images/netlify.png"
                     class="skill-icon"
                     width="60"
                     alt="Netlify Icon"
@@ -411,7 +411,7 @@
                 </div>
                 <div class="col-6 col-md-4 col-lg-2 skill-item">
                   <img
-                    src="/images/vscode.png"
+                    src="images/vscode.png"
                     class="skill-icon"
                     width="60"
                     alt="VSCode Icon"
