Edited about section paragraph

--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
               <br />
               I became obsessed with advocating for tech education for all even
               more so, especially for soon-to-be young STEAMers. I enrolled in 2
-              intensive coding bootcamps, built 3 React apps, got a software
-              engineering internship, joined 2 social issue-based
+              intensive coding bootcamps, built six React apps, got a software
+              engineering internship, joined two social issue-based
               design-a-thons, did a career day for high school kids, and am
               excited to join a team where I can continue building, learning and
               challenging myself, especially in the field of edu-tech!<br />
