Changed wording in hero and about me sections.

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     </nav>
     <div class="hero">
       <h1 class="text-center">
-        Frontend developer 👩🏻‍💻 focused on accessibility, optimal user experience
-        & delightful design. Based in Los Angeles.🌴
+        Frontend developer 👩🏻‍💻 focused optimal user experience, accessibility &
+        delightful design. Based in Los Angeles.🌴
       </h1>
       <div class="hero-buttons">
         <div class="btn-group">
@@ -346,8 +346,8 @@
               games! 👾<br />
               <br />
               When I’m not coding or creating sites for small businesses, you’ll
-              find me working out, 🏋🏻‍♀️ taking walks with my dog, 🐾 learning to
-              skateboard, 🛹 and trying new recipes in the kitchen!👩🏻‍🍳<br />
+              find me learning Unity, working out, 🏋🏻‍♀️ and trying new recipes in
+              the kitchen! 👩🏻‍🍳<br />
               <br />
               I'm open to full-time frontend developer roles. ✅
             </p>
