Changed padding on about me title

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </nav>
     <div class="hero">
       <h1 class="text-center">
-        Frontend developer 👩🏻‍💻 focused optimal user experience, accessibility &
+        Frontend developer 👩🏻‍💻 focused on optimal UX, accessibility &
         delightful design. Based in Los Angeles.🌴
       </h1>
       <div class="hero-buttons">
@@ -342,11 +342,10 @@
               excited to join a team where I can continue building, learning and
               challenging myself, especially in the field of edu-tech!<br />
               <br />
-              Connect with me to talk coding, making tech accessible & fun, and
-              games! 👾<br />
+              Connect with me to talk about making tech accessible & fun. <br />
               <br />
               When I’m not coding or creating sites for small businesses, you’ll
-              find me learning Unity, working out, 🏋🏻‍♀️ and trying new recipes in
+              find me learning Unity, 🕹️ working out, 🏋🏻‍♀️ and trying new recipes in
               the kitchen! 👩🏻‍🍳<br />
               <br />
               I'm open to full-time frontend developer roles. ✅
@@ -431,7 +430,7 @@
     </div>
     <footer>
       <div class="d-flex flex-column align-items-center mb-3">
-        <h2 id="contact">Let's Connect!</h2>
+        <h2 id="contact">Let's Connect! 🔗</h2>
         <a
           href="mailto:stephanieparrastudio@gmail.com"
           target="_blank"
