--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             target="_blank"
             title="Resume"
             class="secondary-button btn-group"
+            rel="noopener noreferrer"
             >See my resume
           </a>
         </div>
@@ -136,12 +137,14 @@
                     href="https://github.com/stephanieparra/react-weather-app"
                     title="github-repo"
                     class="github-repo-link"
+                    target="_blank" rel="noopener noreferrer"
                     >Github Repo</a
                   >
                   <a
                     href="https://react-vaporwave-weather-app.netlify.app"
                     title="live-version-link"
                     class="live-version-link"
+                    target="_blank" rel="noopener noreferrer"
                     >Live Version</a
                   >
                 </div>
@@ -176,12 +179,14 @@
                     href="https://github.com/stephanieparra/dictionary-app"
                     title="github-repo"
                     class="github-repo-link"
+                    target="_blank" rel="noopener noreferrer"
                     >Github Repo</a
                   >
                   <a
                     href="https://react-dynamic-dictionary.netlify.app"
                     title="live-version-link"
                     class="live-version-link"
+                    target="_blank" rel="noopener noreferrer"
                     >Live Version</a
                   >
                 </div>
@@ -215,12 +220,14 @@
                     href="https://github.com/stephanieparra/react-sticky-notes"
                     title="github-repo"
                     class="github-repo-link"
+                    target="_blank" rel="noopener noreferrer"
                     >Github Repo</a
                   >
                   <a
                     href="https://post-it-notes-react-app.netlify.app"
                     title="live-version-link"
                     class="live-version-link"
+                    target="_blank" rel="noopener noreferrer"
                     >Live Version</a
                   >
                 </div>
@@ -252,12 +259,14 @@
                     href="https://github.com/stephanieparra/github-repo-gallery"
                     title="github-repo"
                     class="github-repo-link"
+                    target="_blank" rel="noopener noreferrer"
                     >Github Repo</a
                   >
                   <a
                     href="https://gh-repo-gallery.netlify.app"
                     title="live-version-link"
                     class="live-version-link"
+                    target="_blank" rel="noopener noreferrer"
                     >Live Version</a
                   >
                 </div>
@@ -293,12 +302,14 @@
                     href="https://github.com/stephanieparra/guess-the-word-project"
                     title="github-repo"
                     class="github-repo-link"
+                    target="_blank" rel="noopener noreferrer"
                     >Github Repo</a
                   >
                   <a
                     href="https://javascript-guess-word-game.netlify.app"
                     title="live-version-link"
                     class="live-version-link"
+                    target="_blank" rel="noopener noreferrer"
                     >Live Version</a
                   >
                 </div>
@@ -433,22 +444,22 @@
         <h2 id="contact">Let's Connect! 🔗</h2>
         <a
           href="mailto:stephanieparrastudio@gmail.com"
-          target="_blank"
           class="email-link"
           title="Stephanie's email"
+          target="_blank" rel="noopener noreferrer"
           >stephanieparrastudio@gmail.com
         </a>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a
           href="https://github.com/stephanieparra"
-          target="_blank"
+          target="_blank" rel="noopener noreferrer"
           title="Github Profile"
           ><i class="fab fa-github"></i>
         </a>
         <a
           href="https://www.linkedin.com/in/stephaniemsparra/"
-          target="_blank"
+          target="_blank" rel="noopener noreferrer"
           title="LinkedIn Profile"
           ><i class="fab fa-linkedin"></i>
         </a>
@@ -457,7 +468,7 @@
         © 2022 This site was built by Stephanie Parra and is
         <a
           href="https://github.com/stephanieparra/portfolio-project"
-          target="_blank"
+          target="_blank" rel="noopener noreferrer"
           title="Github Profile"
           class="open-sourced"
           >open-sourced </a
