Fixed typos & stray div tag

--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
     </nav>
     <div class="hero">
       <h1 class="text-center">
-        Frontend developer 👩🏻‍💻 focused on optimal UX, accessibility &
-        delightful design. Based in Los Angeles.🌴
+        Frontend developer 👩🏻‍💻 with UX experience. Based in Los Angeles.🌴
       </h1>
       <div class="hero-buttons">
         <div class="btn-group">
@@ -137,14 +136,16 @@
                     href="https://github.com/stephanieparra/dictionary-app"
                     title="github-repo"
                     class="github-repo-link"
-                    target="_blank" rel="noopener noreferrer"
-                    >Github Repo</a
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >GitHub Repo</a
                   >
                   <a
                     href="https://react-dynamic-dictionary.netlify.app"
                     title="live-version-link"
                     class="live-version-link"
-                    target="_blank" rel="noopener noreferrer"
+                    target="_blank"
+                    rel="noopener noreferrer"
                     >Live Version</a
                   >
                 </div>
@@ -179,14 +180,16 @@
                     href="https://github.com/stephanieparra/react-weather-app"
                     title="github-repo"
                     class="github-repo-link"
-                    target="_blank" rel="noopener noreferrer"
-                    >Github Repo</a
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >GitHub Repo</a
                   >
                   <a
                     href="https://react-vaporwave-weather-app.netlify.app"
                     title="live-version-link"
                     class="live-version-link"
-                    target="_blank" rel="noopener noreferrer"
+                    target="_blank"
+                    rel="noopener noreferrer"
                     >Live Version</a
                   >
                 </div>
@@ -220,14 +223,16 @@
                     href="https://github.com/stephanieparra/react-sticky-notes"
                     title="github-repo"
                     class="github-repo-link"
-                    target="_blank" rel="noopener noreferrer"
-                    >Github Repo</a
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >GitHub Repo</a
                   >
                   <a
                     href="https://post-it-notes-react-app.netlify.app"
                     title="live-version-link"
                     class="live-version-link"
-                    target="_blank" rel="noopener noreferrer"
+                    target="_blank"
+                    rel="noopener noreferrer"
                     >Live Version</a
                   >
                 </div>
@@ -259,14 +264,16 @@
                     href="https://github.com/stephanieparra/github-repo-gallery"
                     title="github-repo"
                     class="github-repo-link"
-                    target="_blank" rel="noopener noreferrer"
-                    >Github Repo</a
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >GitHub Repo</a
                   >
                   <a
                     href="https://gh-repo-gallery.netlify.app"
                     title="live-version-link"
                     class="live-version-link"
-                    target="_blank" rel="noopener noreferrer"
+                    target="_blank"
+                    rel="noopener noreferrer"
                     >Live Version</a
                   >
                 </div>
@@ -292,7 +299,7 @@
                   <li>CSS</li>
                 </ul>
                 <p class="card-text">
-                  An interactive vanilla javascript project where the player
+                  An interactive Vanilla JavaScript project where the player
                   types a letter to guess a word. The project features the
                   display of already-guessed letters, the countdown to how many
                   guesses remain, and the option to restart the game.
@@ -302,14 +309,16 @@
                     href="https://github.com/stephanieparra/guess-the-word-project"
                     title="github-repo"
                     class="github-repo-link"
-                    target="_blank" rel="noopener noreferrer"
-                    >Github Repo</a
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >GitHub Repo</a
                   >
                   <a
                     href="https://javascript-guess-word-game.netlify.app"
                     title="live-version-link"
                     class="live-version-link"
-                    target="_blank" rel="noopener noreferrer"
+                    target="_blank"
+                    rel="noopener noreferrer"
                     >Live Version</a
                   >
                 </div>
@@ -356,8 +365,8 @@
               Connect with me to talk about making tech accessible & fun. <br />
               <br />
               When I’m not coding or creating sites for small businesses, you’ll
-              find me learning Unity, 🕹️ working out, 🏋🏻‍♀️ and trying new recipes in
-              the kitchen! 👩🏻‍🍳<br />
+              find me learning Unity, 🕹️ working out, 🏋🏻‍♀️ and trying new recipes
+              in the kitchen! 👩🏻‍🍳<br />
               <br />
               I'm open to full-time frontend developer roles. ✅
             </p>
@@ -377,63 +386,62 @@
         <h2 class="section-title text-center">Skills & Tools 🧰</h2>
         <div class="container">
           <div class="row row-skills justify-content-center">
-              <div class="col-6 col-md-4 col-lg-2 skill-item">
-                <i class="fab fa-html5 skill-icon"></i>
-                <p class="skill-title">HTML5</p>
-              </div>
-              <div class="col-6 col-md-4 col-lg-2 skill-item">
-                <i class="fab fa-css3-alt skill-icon"></i>
-                <p class="skill-title">CSS3</p>
-              </div>
-              <div class="col-6 col-md-4 col-lg-2 skill-item">
-                <i class="fab fa-js-square skill-icon"></i>
-                <p class="skill-title">JavaScript</p>
-              </div>
-              <div class="col-6 col-md-4 col-lg-2 skill-item">
-                <i class="fab fa-react skill-icon"></i>
-                <p class="skill-title">React</p>
-              </div>
-              <div class="col-6 col-md-4 col-lg-2 skill-item">
-                <i class="fab fa-bootstrap skill-icon"></i>
-                <p class="skill-title">Bootstrap</p>
-              </div>
+            <div class="col-6 col-md-4 col-lg-2 skill-item">
+              <i class="fab fa-html5 skill-icon"></i>
+              <p class="skill-title">HTML5</p>
             </div>
-            <div class="row row-skills justify-content-center">
-              <div class="col-6 col-md-4 col-lg-2 skill-item">
-                <img
-                  src="images/api.png"
-                  class="skill-icon"
-                  width="60"
-                  alt="API Icon"
-                />
-                <p class="skill-title">REST APIs</p>
-              </div>
-              <div class="col-6 col-md-4 col-lg-2 skill-item">
-                <i class="fab fa-github-square skill-icon"></i>
-                <p class="skill-title">GitHub</p>
-              </div>
-              <div class="col-6 col-md-4 col-lg-2 skill-item">
-                <img
-                  src="images/netlify.png"
-                  class="skill-icon"
-                  width="60"
-                  alt="Netlify Icon"
-                />
-                <p class="skill-title">Hosting</p>
-              </div>
-              <div class="col-6 col-md-4 col-lg-2 skill-item">
-                <img
-                  src="images/vscode.png"
-                  class="skill-icon"
-                  width="60"
-                  alt="VSCode Icon"
-                />
-                <p class="skill-title">VSCode</p>
-              </div>
-              <div class="col-6 col-md-4 col-lg-2 skill-item">
-                <i class="fab fa-figma skill-icon"></i>
-                <p class="skill-title">Figma</p>
-              </div>
+            <div class="col-6 col-md-4 col-lg-2 skill-item">
+              <i class="fab fa-css3-alt skill-icon"></i>
+              <p class="skill-title">CSS3</p>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 skill-item">
+              <i class="fab fa-js-square skill-icon"></i>
+              <p class="skill-title">JavaScript</p>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 skill-item">
+              <i class="fab fa-react skill-icon"></i>
+              <p class="skill-title">React</p>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 skill-item">
+              <i class="fab fa-bootstrap skill-icon"></i>
+              <p class="skill-title">Bootstrap</p>
+            </div>
+          </div>
+          <div class="row row-skills justify-content-center">
+            <div class="col-6 col-md-4 col-lg-2 skill-item">
+              <img
+                src="images/api.png"
+                class="skill-icon"
+                width="60"
+                alt="API Icon"
+              />
+              <p class="skill-title">REST APIs</p>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 skill-item">
+              <i class="fab fa-github-square skill-icon"></i>
+              <p class="skill-title">GitHub</p>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 skill-item">
+              <img
+                src="images/netlify.png"
+                class="skill-icon"
+                width="60"
+                alt="Netlify Icon"
+              />
+              <p class="skill-title">Hosting</p>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 skill-item">
+              <img
+                src="images/vscode.png"
+                class="skill-icon"
+                width="60"
+                alt="VSCode Icon"
+              />
+              <p class="skill-title">VSCode</p>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 skill-item">
+              <i class="fab fa-figma skill-icon"></i>
+              <p class="skill-title">Figma</p>
             </div>
           </div>
         </div>
@@ -446,20 +454,23 @@
           href="mailto:stephanieparrastudio@gmail.com"
           class="email-link"
           title="Stephanie's email"
-          target="_blank" rel="noopener noreferrer"
+          target="_blank"
+          rel="noopener noreferrer"
           >stephanieparrastudio@gmail.com
         </a>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a
           href="https://github.com/stephanieparra"
-          target="_blank" rel="noopener noreferrer"
+          target="_blank"
+          rel="noopener noreferrer"
           title="Github Profile"
           ><i class="fab fa-github"></i>
         </a>
         <a
           href="https://www.linkedin.com/in/stephaniemsparra/"
-          target="_blank" rel="noopener noreferrer"
+          target="_blank"
+          rel="noopener noreferrer"
           title="LinkedIn Profile"
           ><i class="fab fa-linkedin"></i>
         </a>
@@ -468,7 +479,8 @@
         © 2022 This site was built by Stephanie Parra and is
         <a
           href="https://github.com/stephanieparra/portfolio-project"
-          target="_blank" rel="noopener noreferrer"
+          target="_blank"
+          rel="noopener noreferrer"
           title="Github Profile"
           class="open-sourced"
           >open-sourced </a
